<resources>

    <string name="app_name">M3Finances</string>


    <!-- Failure message strings -->

    <string name="select">Select</string>

    <string name="title_home">Home</string>
    <string name="view_all">View all</string>
    <string name="accounts">Account</string>

    <string name="category_name">Category Name</string>


    <string name="title_graph">Graph</string>


    <string name="currency">Currency</string>

    <string name="choose_color">Choose color</string>
    <string name="choose_icon">Choose Icon</string>


    <string name="categories">Categories</string>
    <string name="total">Total</string>
    <string name="transaction_summary">Summary</string>
    <string name="clear_all">Clear All</string>
    <string name="category_selection_message">Should select at least one category to proceed</string>
    <string name="share">Share</string>
    <string name="hello">Hello!</string>
    <string name="guest">Guest</string>
    <string name="balance">Balance</string>

    <string name="add_transaction">Add Transaction</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="analysis">Analysis</string>
    <string name="transaction">Transaction</string>

    <string name="app_lock_title">Unlock M3Finances</string>
    <string name="app_lock_description">Verify your identity to continue</string>
    <string name="app_lock_unlock">Unlock</string>
    <string name="shortcut_new_transaction_short">New expense</string>
    <string name="shortcut_new_transaction_long">Add a new expense</string>
    <string name="shortcut_debt_list_short">Debts</string>
    <string name="shortcut_debt_list_long">View my debts</string>
    <string name="shortcut_shopping_list_short">Shopping</string>
    <string name="shortcut_shopping_list_long">View my shopping lists</string>

    <string name="notification_listener_warning_title">Notification access cut off</string>
    <string name="notification_listener_warning_desc">Battery saver may have stopped the service. Re-enable it to avoid missing automatic transactions.</string>
    <string name="notification_listener_warning_action">Fix now</string>

    <string name="widget_total_balance">Total balance</string>
    <string name="widget_balance">Balance</string>
    <string name="widget_income">Income</string>
    <string name="widget_expenses">Expenses</string>
    <string name="widget_spent">Spent</string>
    <string name="widget_recent">Recent</string>
    <string name="widget_no_transactions">No transactions</string>
    <string name="widget_refresh">Refresh</string>
    <string name="widget_saved_pct">%1$s%% saved</string>
    <string name="widget_income_spent_pct">%1$d%% of income spent</string>
    <string name="widget_amount_saved">%1$s saved</string>
</resources>
